# libra-data

./: .gitignore  README.md  embedding.proto  go.mod  go.sum  goose.sh  libra-data.proto  main.go  main_test.go  preprocess.go  preprocess_test.go  sqlc.yaml  stop_tunnel.sh  utils.go  utils_test.go
analysis/: main.py
book_scrap/: book_scrap.go  preprocess.go  preprocess_test.go
cmd/collect/: collect.go  collect_test.go
cmd/collection/: collect.go
cmd/insert/: insert.go
collect/: collect_data.go  collect_data_test.go  model.go
collection/: collect_data.go  collect_data_test.go  model.go
db/: connect.go  connect_test.go  create_table.go  create_table_test.go  db_test_util.go  db_test_util_test.go  insert.go  insert_test.go  update.go  update_test.go
db/migration/: 20241211022533_create_books_table.sql  (+8 more)
db/sql/: query.sql  (+1 more)
embedding/: embedding.go  embedding_test.go
library_api/: congress.go  congress_test.go  daum.go  daum_test.go  library_api.go  library_api_test.go  model.go  naver.go  naver_test.go
library_scrap/: library_scrap.go  library_scrap_test.go
model/: books.go
pb/: libra-data.pb.go
preprocess/: preprocess.go  preprocess_test.go
scraper/: .gitignore  .prettierrc.json  README.md  book-scraper.test.ts  book-scraper.ts  bun.lockb  index.ts  jest.config.ts  library-scraper.test.ts  library-scraper.ts  package-lock.json  package.json  tsconfig.json
token/: .gitignore  README.md  main.py  pyproject.toml  sub.py
token/pkg/: class_num_classifier.py  class_num_classifier_test.py  token_count.py
utils/: utils.go  utils_test.go
(+49 files in other folders)
