[tool.poetry]
name = "token"
version = "0.1.0"
description = ""
authors = ["leeway0507 <niv1589@knou.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pytest = "^8.3.4"
tiktoken = "^0.8.0"
scikit-learn = "^1.6.1"
fastparquet = "^2024.11.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
